--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= render 'users/info', user: @user %>
+      <h2>New book</h2>
+      <%= render 'books/form', book: @book_new %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table">
+        <tr>
+          <td>
+            <%= link_to @book.user do %>
+             <%= image_tag @book.user.get_profile_image(40, 40) %>
+             <%= @book.user.name %>
+            <% end %>
+          </td>
+          <td><%= link_to @book.title, book_path(@book.id) %></td>
+          <td><%= @book.body %></td>
+          <% if @book.user == current_user %>
+           <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success edit_book" %></td>
+           <td><%= link_to "Destroy", book_path(@book.id), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-dm btn-danger destroy_book" %></td>
+          <% end %>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
