--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,27 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(63, 63), class: "attachment user profile_image fallback" %>
+       <table class="table">
+         <tbody>
+           <tr></tr>
+           <tr>
+             <th>name</th>
+             <th><%= @user.name %></th>
+           </tr>
+           <tr>
+             <th>introduction</th>
+             <th><%= @user.introduction %></th>
+           </tr>
+         </tbody>
+       </table>
+       <h2 class="mt-3">New Book</h2>
+       <%= render 'books/form', book: @book %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <%= render 'books/index', books: @books %>
+    </div>
+  </div>
+</div>
