--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,5 +10,5 @@
   </tr>
 </table>
 <div class="row">
-  <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" %>
+  <%= link_to "Edit", edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" %>
 </div>
