--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -15,7 +15,8 @@
          <% end %>
        </td>
        <td><%= user.name %></td>
-       <td><%= link_to "Show", user, class: "user_#{user.id}" %></td>
+       <td><%= link_to "Show", user_path(user.id) %></td>
      </tr>
+    <% end %>
   </tbody>
 </table>
