--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,13 +1,16 @@
 <%= image_tag user.get_profile_image(63, 63), class: "attachment user profile_image fallback" %>
 <table class="table">
-  <tr>
+  <tbody>
+   <tr></tr>
+   <tr>
     <th>name</th>
     <th><%= user.name %></th>
-  </tr>
-  <tr>
+   </tr>
+   <tr>
     <th>introduction</th>
     <th><%= user.introduction %></th>
-  </tr>
+   </tr>
+  </tbody>
 </table>
 <div class="row">
   <%= link_to "Edit", edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" %>
