--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -13,5 +13,7 @@
   </tbody>
 </table>
 <div class="row">
-  <%= link_to "Edit", edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" %>
+  <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
+   <i class="fas fa-user-cog"></i>
+  <% end %>
 </div>
