--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,6 +3,7 @@
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
       <%= form_with model:@user, local:true do |f| %>
+       <%= render 'layouts/errors', obj: @user %>
        <div class="form-group">
          <label for="user_name">Name</label>
          <%= f.text_field :name, autofocus: true, id: "user_name", placeholder: "名前", class: "form-contol name" %>
