--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,12 +18,14 @@
           </td>
           <td><%= link_to @book.title, book_path(@book.id) %></td>
           <td><%= @book.body %></td>
+          <td>コメント数: <%= @book.book_comments.count %></td>
           <% if @book.user == current_user %>
            <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success edit_book" %></td>
            <td><%= link_to "Destroy", book_path(@book.id), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-dm btn-danger destroy_book" %></td>
           <% end %>
         </tr>
       </table>
+      <div class="comments-area"><%= render 'book_comments/comment', book: @book, book_comment: @book_comment %></div>
     </div>
   </div>
 </div>
