--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -12,6 +12,7 @@
      <td><%= link_to "Destroy", book_book_comment_path(book, book_comment), method: :delete, remote: true, class: "btn btn-danger" %></td>
     <% end %>
   </tr>
+  <% end %>
 </table>
 
 <div class="form-group">
