--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -15,6 +15,14 @@
          <% end %>
        </td>
        <td><%= user.name %></td>
+       <td><% unless current_user == user %>
+            <% if current_user.following?(user) %>
+             <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete %>
+            <% else %>
+             <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+            <% end %>
+           <% end %>
+       </td>
        <td><%= link_to "Show", user_path(user.id) %></td>
      </tr>
     <% end %>
