--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,6 +10,14 @@
     <th>introduction</th>
     <th><%= user.introduction %></th>
    </tr>
+   <tr>
+    <th>follows</th>
+    <th><% link_to user.followings.count, user_followings_path(user.id) %></th>
+   </tr>
+   <tr>
+    <th>followers</th>
+    <th><% link_to user_followers.count, user_followers_path(user.id) %></th>
+   </tr>
   </tbody>
 </table>
 <div class="row">
