--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,6 +17,9 @@
        </td>
        <td><%= link_to book.title, book_path(book.id) %></td>
        <td><%= book.body %></td>
+       <td class="favorite-btn_<%= book.id %>">
+         <%= render 'favorites/favorite-btn', book: book %>
+       </td>
        <td>コメント数: <%= book.book_comments.count %></td>
      </tr>
     <% end %>
