--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,8 +14,23 @@
              <th>introduction</th>
              <th><%= @user.introduction %></th>
            </tr>
+           <tr>
+             <th>follows</th>
+             <th><%= link_to @user.followings.count, user_followings_path(@user.id) %></th>
+           </tr>
+           <tr>
+             <th>followers</th>
+             <th><%= link_to @user.followers.count, user_followers_path(@user.id) %></th>
+           </tr>
          </tbody>
        </table>
+       <div class="row">
+         <% if current_user.following?(@user) %>
+          <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :destroy, class: "btn btn-info フォローを外す" %>
+         <% else %>
+          <%= link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-success フォローする" %>
+         <% end %>
+       </div>
        <h2 class="mt-3">New Book</h2>
        <%= render 'books/form', book: @book %>
     </div>
