--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -12,11 +12,11 @@
    </tr>
    <tr>
     <th>follows</th>
-    <th><% link_to user.followings.count, user_followings_path(user.id) %></th>
+    <th><%= link_to user.followings.count, user_followings_path(user.id) %></th>
    </tr>
    <tr>
     <th>followers</th>
-    <th><% link_to user_followers.count, user_followers_path(user.id) %></th>
+    <th><%= link_to user.followers.count, user_followers_path(user.id) %></th>
    </tr>
   </tbody>
 </table>
